[tool.poetry]
name = "tictactoe_lw3175"
version = "0.1.0"
description = "for hw7"
authors = ["Lan Wang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
